--- a/iweather/iweather/AppDelegate/Main.storyboard
+++ b/iweather/iweather/AppDelegate/Main.storyboard
@@ -54,10 +54,10 @@
             </objects>
             <point key="canvasLocation" x="1068" y="217.24137931034485"/>
         </scene>
-        <!--MapVC-->
+        <!--Goo Gle MapVC-->
         <scene sceneID="VXM-Wi-U1i">
             <objects>
-                <viewController storyboardIdentifier="MapVC" id="FMv-v7-Gbf" customClass="MapVC" customModule="iweather" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="GooGleMapVC" id="FMv-v7-Gbf" customClass="GooGleMapVC" customModule="iweather" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="aSV-oD-DpJ"/>
                         <viewControllerLayoutGuide type="bottom" id="L75-9D-4Yt"/>
@@ -66,19 +66,21 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="7vH-QN-6Ht" customClass="GMSMapView">
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="AmV-Yc-ok3" customClass="GMSMapView">
                                 <rect key="frame" x="0.0" y="20" width="375" height="647"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                             </view>
                         </subviews>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="7vH-QN-6Ht" firstAttribute="leading" secondItem="Pep-cK-Gp0" secondAttribute="leading" id="Gt3-v7-NKd"/>
-                            <constraint firstItem="L75-9D-4Yt" firstAttribute="top" secondItem="7vH-QN-6Ht" secondAttribute="bottom" id="XfN-qm-3gv"/>
-                            <constraint firstItem="7vH-QN-6Ht" firstAttribute="top" secondItem="aSV-oD-DpJ" secondAttribute="bottom" id="f3t-jl-neG"/>
-                            <constraint firstAttribute="trailing" secondItem="7vH-QN-6Ht" secondAttribute="trailing" id="m68-kj-RyT"/>
+                            <constraint firstItem="AmV-Yc-ok3" firstAttribute="top" secondItem="aSV-oD-DpJ" secondAttribute="bottom" id="noQ-nS-AzE"/>
+                            <constraint firstItem="AmV-Yc-ok3" firstAttribute="leading" secondItem="Pep-cK-Gp0" secondAttribute="leading" id="qej-tQ-4VZ"/>
+                            <constraint firstAttribute="trailing" secondItem="AmV-Yc-ok3" secondAttribute="trailing" id="r1x-Sx-pny"/>
+                            <constraint firstItem="L75-9D-4Yt" firstAttribute="top" secondItem="AmV-Yc-ok3" secondAttribute="bottom" id="zE2-7X-nTt"/>
                         </constraints>
                     </view>
+                    <connections>
+                        <outlet property="ViewGoogleMap" destination="AmV-Yc-ok3" id="5PW-7Z-cE0"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="sUr-6B-1WR" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
